--- a/.drone.yml
+++ b/.drone.yml
@@ -26,6 +26,7 @@ steps:
       dockerfile: manim-src/Dockerfile
       repo: garykim/manim
       context: manim-src
+      quiet: true
       username: garykim
       password:
         from_secret: docker_password
